 * Added a hacky property to set fields to allow their tags and labels to 
    depend dynamically on the object. Used this for $doc->main
 * Internal buttons can now be images.
 * Made Edit_staff inherit from Edit
 * Made internal buttons in components use #t to keep them on screen.
 * Added method to component that tests if a button was pressed within that
    component.
 * Rendering names for views now obeys render options. 
 * Moved templates into template directory.
 * Moved non-editable files from /cfg into /lib

2006-08-07 cjg

 * Reworked screens to use properties rather than methods for expensive, 
    and the priv required to view them.
 * Checked the $screen->{priv} property where appropriate.
 * Actions now can be called on screens as methods, but they must be 
    registered in the constructor.
 * Shifted edit and edit_staff to use actions like this.

2006-08-08 cjg
 
 * Moved _staff screens into a Staff/ directory.
 * Made screens register themselves as parts of lists. These lists are now 
    used by the tools, other tools and eprint view tabs.
 * Renamed screens with _ in the module name to use CamelCase instead.
 * If there is only one "other" tool then it doesn't bother hiding it below
    the cut.
 * Plugins now have their own logical prefix in phrases, and a handy method
    which gets their phrases without adding the prefix by hand.
 * Added a move screen to handle moving eprints around, although it never
    actually gets rendered.
 * Actions work in lists, as well as just screens.
 * The actions screen now picks up actions and has (most) of the actions 
    registered with it.

2006-08-09 cjg

 * Split metadata-types.xml into /types/document.xml etc.
 * Added deprecated warnings to type-related methods in dataset
 * Nerfed get_fields_required_for_type as it won't be used soon.
 * Datasets no longer have types (actually they still do in the code, but
    the don't conceptually)
 * Renamed archive config perl modules to have shorter names.